force-app/main/default/objects/PL__c/PL__c.object-meta.xml
<CustomObject>
    <label>PL</label>
    <nameField>
        <label>PL Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>PLs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>