force-app/main/default/objects/PL__c/fields/f1__c.field-meta.xml
<CustomField>
    <fullName>f1__c</fullName>
    <inlineHelpText>f1</inlineHelpText>
    <label>f1</label>
    <length>25</length>
    <type>Text</type>
</CustomField>