force-app/main/default/objects/PL__c/fields/f222__c.field-meta.xml
<CustomField>
    <fullName>f222__c</fullName>
    <label>f222</label>
    <length>30</length>
    <type>Text</type>
</CustomField>