force-app/main/default/objects/PL__c/fields/f4444__c.field-meta.xml
<CustomField>
    <fullName>f4444__c</fullName>
    <defaultValue>$Label.lb1 &amp;  $Label.CLR11</defaultValue>
    <description>ts</description>
    <inlineHelpText>ts</inlineHelpText>
    <label>f4444</label>
    <length>50</length>
    <type>Text</type>
</CustomField>