force-app/main/default/objects/PL__c/fields/PL2OnPL1__c.field-meta.xml
<CustomField>
    <fullName>PL2OnPL1__c</fullName>
    <description>PL2OnPL1</description>
    <inlineHelpText>PL2OnPL1</inlineHelpText>
    <label>PL2</label>
    <referenceTo>pl2__c</referenceTo>
    <relationshipLabel>PLs</relationshipLabel>
    <relationshipName>PLs</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>