force-app/main/default/objects/PL__c/fields/test5555__c.field-meta.xml
<CustomField>
    <fullName>test5555__c</fullName>
    <label>test5555</label>
    <type>TextArea</type>
</CustomField>